--- a/VHDLGenerator/VHDLGenerator.csproj
+++ b/VHDLGenerator/VHDLGenerator.csproj
@@ -58,6 +58,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\DrawingFile.cs" />
     <Compile Include="Templates\ComponentTemplate.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
