--- a/VHDLGenerator/VHDLGenerator.csproj
+++ b/VHDLGenerator/VHDLGenerator.csproj
@@ -59,6 +59,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\DrawingFile.cs" />
+    <Compile Include="Models\TreeViewData.cs" />
     <Compile Include="Templates\ComponentTemplate.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
